// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appReducer handle the create token action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "token": false,
  "user": false,
}
`;

exports[`appReducer handle the create token error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test error],
  "token": false,
  "user": false,
}
`;

exports[`appReducer handle the create token success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "token": "token",
  "user": false,
}
`;

exports[`appReducer handle the delete token action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "token": false,
  "user": false,
}
`;

exports[`appReducer handle the load user action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "token": false,
  "user": false,
}
`;

exports[`appReducer handle the load user error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test error],
  "token": false,
  "user": false,
}
`;

exports[`appReducer handle the load user success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "token": false,
  "user": Immutable.Map {},
}
`;

exports[`appReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "token": false,
  "user": false,
}
`;
